
CHANGELOG.txt to track changes to the Omega theme.

##########################################################################################
##### Current Release: 7.x-3.0-beta3
##### Pending changes for Next Release
########################################################################################## 

7/17/11
=========
#1220198  - The equal height feature is now solely based on CSS. This might still not
be the perfect solution but the jQuery approach that we were using before proved to be
a dead end.

#1220950  - Fixed and minified RTL grid CSS files.

7/09/11
=========
#1214048  - Omega no longer abuses the variables table for the caching. Instead we are
now using cache_set and cache_get.

#1213176  - Fixed the theme settings in the starterkits. The global.css file is now active
by default.

##########################################################################################
##### Changes in: 7.x-3.0-beta2
########################################################################################## 

6/29/11
=========
#1204254  - Removed mobile.css and style.css in favor of one single global.css.

6/28/11
=========
#1202708  - Fix inline display of field labels.

##########################################################################################
##### Changes in: 7.x-3.0-beta1
########################################################################################## 

6/27/11
=========
#1200272  - Fixed a bug that was incorrectly assuming that all regions are part of a zone.

#1191762  - Reworked the JavaScript libraries to use Drupal.behaviors.

#1198476  - If the media query library is enabled the equal heights feature will be
deactivated on the mobile version.

6/19/11
=========
#1192918  - The RTL grid CSS files were upside-down for the pull, push, prefix and suffix
CSS classes. This is now fixed.

6/17/11
=========
#1191764  - We are no longer use unset() on regions if they are not enabled. Instead move 